--- a/config/database.yml
+++ b/config/database.yml
@@ -82,8 +82,10 @@ production:
   primary: &primary_production
     <<: *default
     database: app_production
-    username: app
-    password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+    username: postgres
+    password: password
+    host: db
+    port: 5432
   cache:
     <<: *primary_production
     database: app_production_cache
