--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,48 +5,60 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: dr_saleeg_development
+      POSTGRES_DB: app_production
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 1s
-      timeout: 3s
-      retries: 30
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:7
     restart: always
-    ports:
-      - "6379:6379"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 1s
+      interval: 5s
       timeout: 3s
-      retries: 30
+      retries: 5
 
   app:
     build: .
+    image: myapp_image:latest
     restart: always
     depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+    db:
+      condition: service_healthy
+    redis:
+      condition: service_healthy
     environment:
-      DATABASE_URL: postgres://postgres:password@db:5432/dr_saleeg_development
-      REDIS_URL: redis://redis:6379/0
+     RAILS_ENV: production
+     DATABASE_URL: postgres://postgres:password@db:5432/app_production
+     REDIS_URL: redis://redis:6379/0
+     RAILS_LOG_TO_STDOUT: "true"
+     RAILS_SERVE_STATIC_FILES: "true"
+     RAILS_HOST: backend.dr-saleh.com #need to make sure from domain
+     RAILS_PROTOCOL: https
+     RAILS_ASSUME_SSL: "false"
+     RAILS_FORCE_SSL: "false"
+     PORT: "9005"
+     SECRET_KEY_BASE: 141532c842625b36b7ae0655021349b424e08a277f961ec0e1dfab303bafc128376c345f3ced0a50d2fd2a59879ed446a56c62c1e28a92bf3764b95c887c74f0
+
     volumes:
-      - .:/app
       - storage:/app/storage
     ports:
-      - "3000:3000"
-    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0'"
+     - "9005:900  5"  # Map host port 9001 to container port 9001
+    command: ["bash", "-c", "rm -f tmp/pids/server.pid && bin/rails server -b 0.0.0.0 -p ${PORT:-9005}"]
+    healthcheck:
+      test: ["CMD", "sh", "-c", "curl -f http://localhost:${PORT:-9005}/up || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 40s
 
   sidekiq:
-    build: .
+    image: myapp_image:latest
     restart: always
     depends_on:
       db:
@@ -54,8 +66,11 @@ services:
       redis:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgres://postgres:password@db:5432/dr_saleeg_development
+      RAILS_ENV: production
+      DATABASE_URL: postgres://postgres:password@db:5432/app_production
       REDIS_URL: redis://redis:6379/0
+      SECRET_KEY_BASE: 141532c842625b36b7ae0655021349b424e08a277f961ec0e1dfab303bafc128376c345f3ced0a50d2fd2a59879ed446a56c62c1e28a92bf3764b95c887c74f0
+
     volumes:
       - storage:/app/storage
     command: ["bundle", "exec", "sidekiq"]
